fix noti
