# app/serializers/user_notification_serializer.rb
@@ -3,5 +3,13 @@
 class UserNotificationSerializer
   include JSONAPI::Serializer
 
-  attributes :id, :title, :body, :link, :notification_type, :read, :created_at
+  attributes :id, :user_id, :title, :body, :link, :notification_type, :read, :created_by, :created_at
+
+  attribute :user_email do |notification|
+    notification.user&.email
+  end
+
+  attribute :user_display_name do |notification|
+    notification.user&.display_name
+  end
 end
